tdf#117092 dbahsql: handle multiple primary keys

Set primary keys at the end of the sql statement instead of putting it
right after the column definition. This way multiple primary keys can be
defined.

Change-Id: I7956a536b0516fd8a773d4aa64ccb930ae5c715d